# vs-agentic-platform

./: PLATFORM_FLOW_README.md  README (1).md  README.md  requirements-dev.txt
clinical_trial_agent/: pyproject.toml  pytest.ini  run.py
clinical_trial_agent/agent/: __init__.py  agent.py  guardrails.py  prompt.py  schema.py
clinical_trial_agent/agent/middleware/: __init__.py  action_guardrail.py  content_filter.py  hitl.py  output_guardrail.py  pii.py
clinical_trial_agent/agent/tools/: __init__.py  chart.py  graph.py  hitl.py  search.py  summariser.py
clinical_trial_agent/tests/: conftest.py
clinical_trial_agent/tests/evals/: test_tool_selection.py
clinical_trial_agent/tests/integration/: test_hitl_loop.py
clinical_trial_agent/tests/middleware/: test_output_guardrail.py  test_semantic_cache.py
clinical_trial_agent/tests/unit/: test_guardrails.py
platform/: main.py  pyproject.toml
platform/gateway/: __init__.py  auth.py  middleware.py  rate_limiter.py  router.py
platform/observability/: __init__.py  logger.py  tracer.py
platform/prompt_versioning/: __init__.py  router.py
platform/tests/: test_auth.py  test_prompt_versioning.py
vs-agent-core/: pyproject.toml
vs-agent-core/core/: __init__.py  aws.py  cache.py  pinecone_store.py
vs-agent-core/core/middleware/: __init__.py  base.py  episodic_memory.py  semantic_cache.py  semantic_cache_with_rules.py  tracer.py
vs-chainlit-ui/: app.py  config.toml  requirements-ui.txt
vs-chainlit-ui/.chainlit/: custom.css
vs_platform/: README.md  __init__.py  main.py  pyproject.toml
vs_platform/gateway/: __init__.py  auth.py  injection.py  middleware.py  rate_limiter.py  router.py  schemas.py
vs_platform/observability/: __init__.py  logger.py  tracer.py
vs_platform/prompt_versioning/: __init__.py  manager.py  router.py
vs_platform/tests/: test_auth.py  test_prompt_versioning.py
