[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "clinical-trial-agent"
version     = "0.1.0"
description = "Vidya Sankalp Clinical Trial Agent — pharma-domain AI agent built on vs-agent-core"
readme      = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Core foundation
    "vs-agent-core>=0.1.0",

    # LangChain ecosystem — must match vs-agent-core pins exactly.
    # Repeated here to prevent pip from upgrading when installing
    # this package independently of vs-agent-core.
    "langsmith==0.6.9",
    "langchain-core==1.2.22",
    "langchain==1.1.0",
    "langchain-openai==1.1.1",
    "langgraph==1.0.4",
    "langgraph-prebuilt==1.0.7",
    "langchain-community==0.4.1",

    # AWS
    "boto3",

    # Evaluation + utilities
    "deepeval",
    "pydantic",
    "tenacity",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-html",
    "pytest-xdist",
]

[tool.setuptools.packages.find]
where   = ["."]
include = ["agent*"]

[project.urls]
Homepage   = "https://vidyasankalp.com"
Repository = "https://github.com/vidyasankalp/clinical-trial-agent"
