[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "vs-agent-core"
version     = "0.1.0"
description = "Vidya Sankalp Agent Core — domain-agnostic foundation for VS agentic AI systems"
readme      = "README.md"
requires-python = ">=3.11"

dependencies = [
    # AWS
    "boto3>=1.34",

    # Vector store
    "pinecone>=5.0",

    # LangGraph / LangChain
    "langgraph>=0.3",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary,pool]>=3.1",

    # Embeddings
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]

[project.urls]
Homepage   = "https://vidyasankalp.com"
Repository = "https://github.com/vidyasankalp/vs-agent-core"
