[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "vs-agent-core"
version     = "0.1.0"
description = "Vidya Sankalp Agent Core — domain-agnostic foundation for VS agentic AI systems"
readme      = "README.md"
requires-python = ">=3.11"

dependencies = [
    # AWS
    "boto3",

    # Vector store
    "pinecone",

    # LangChain ecosystem — pinned together as a compatible set.
    # langsmith>=0.7.x removed RunTree from __init__.py which breaks
    # langchain-core==1.2.22. These four must always move together.
    "langsmith==0.6.9",
    "langchain-core==1.2.22",
    "langchain==1.1.0",
    "langchain-openai==1.1.1",

    # LangGraph — compatible with langchain-core==1.2.22
    "langgraph==1.0.4",
    "langgraph-checkpoint==3.0.1",
    "langgraph-checkpoint-postgres==3.0.5",
    "langgraph-prebuilt==1.0.7",

    # Postgres — 3.3.3 required for Python 3.13 (3.2.x has Deque import bug)
    "psycopg==3.3.3",
    "psycopg-binary==3.3.3",
    "psycopg-pool",

    # Numerics / embeddings
    "numpy",
    "openai",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where   = ["."]
include = ["core*"]

[project.urls]
Homepage   = "https://vidyasankalp.com"
Repository = "https://github.com/vidyasankalp/vs-agent-core"
